# roturb

./: .gitignore  Cargo.toml  README.md
src/: component.rs  element.rs  lib.rs  main.rs  prelude.rs  solver.rs
src/element/: gebt.rs  interp.rs  node.rs  quadrature.rs  spectral_beam.rs
src/solver/: dynamic.rs  statics.rs
tests/: dynamic_beam.rs  static_beam.rs
